[gd_scene load_steps=3 format=3 uid="uid://dfthp4fyre3ux"]

[ext_resource type="Script" path="res://card.gd" id="1_yfpp2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jctv7"]
size = Vector2(25, 30)

[node name="Card" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -231.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yfpp2")

[node name="Color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 11
text = "Text"

[node name="Num" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -3.5
offset_top = -16.0
offset_right = 3.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 11

[node name="CardArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardArea"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_jctv7")

[node name="CardTemplate" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 25.0
offset_bottom = 30.0

[node name="CardImage" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 8.0
offset_right = 25.0
offset_bottom = 30.0

[node name="DescriptionContainter" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.5
offset_top = -41.0
offset_right = 18.5
offset_bottom = -1.0
grow_horizontal = 2

[node name="Description" type="Panel" parent="DescriptionContainter"]
layout_mode = 2

[node name="Label" type="Label" parent="DescriptionContainter/Description"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -15.0
offset_right = 16.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 5
text = "Elevates  the flavor of a dish"
autowrap_mode = 2
clip_text = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="CardArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CardArea" to="." method="_on_card_area_area_exited"]
